--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ header code, #contents code {
     background-color: transparent;
     color: inherit;
 }
+pre {
+    max-height: 50ex;
+    overflow-y: auto;
+}
 h1 {
     text-align: center;
     margin-bottom: 2ex;
